src/styles/organisms/_po-posts-list.scss
// =========================| Organism: Posts list |========================= //



.po-posts-list {

  //--------------------------| Variables

  $offset: #{get-page-offset()}vw;


  //--------------------------| Base

  @include mq-tablet-breakpoint('below') {
    > * {
      @include separator();
    }
  }

  @include mq-tablet-breakpoint('above') {
    margin-bottom: calc(#{$offset} * -1);

    > * {
      margin-bottom: $offset;

      > * {
        height: 100%;
      }
    }

    .po-resume {
      height: 100%;

      .item {
        display: flex;
        flex-direction: column;
        height: 100%;
      }

      .body {
        flex: 1;
      }
    }
  }

  display: flex;
  flex-wrap: wrap;


  //--------------------------| Print

  & {
    @include mq-print() {
      display: block;
    }
  }



} // .po-posts-list

